# vroom

./: .gitignore  CMakeLists.txt  CMakeLists_MWW.txt  README.md  build.sh  config.tcd  hello.cpp  run.sh
.mww/: CMakeLists.txt
.obsidian/: appearance.json  workspace.json
.tcd/: CMakeLists.txt
design_notes/: 2023-07-24 - Mike Component.md
src/: gl.cpp  hello.cpp  player.mesh  tile.mesh
src/engine/config/: ConfigService.cpp  ConfigService.h
src/engine/entity/: EntityManager.cpp  EntityManager.h  entity.h
src/engine/entity/camera/: Camera.h
src/engine/event/: Event.h  EventPublisher.cpp  EventPublisher.h  Eventful.h
src/engine/graphics/: Mesh.cpp  Mesh.h  MeshService.cpp  MeshService.h  RenderService.cpp  RenderService.h
src/engine/input/: Keyboard.cpp  Keyboard.h  Keys.h
src/engine/math/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
src/game/camera/: Camera.cpp  Camera.h
src/game/components/: ComponentTypes.h  RenderComponent.cpp  RenderComponent.h
src/game/npcs/human/: Human.cpp  Human.h
src/game/player/: player.cpp  player.h
src/game/player/components/input_component/: PlayerInputComponent.cpp  PlayerInputComponent.h  PlayerInputComponentConfig.h  PlayerInputComponentFactory.cpp  PlayerInputComponentFactory.h
src/game/player/components/render_component/: PlayerRenderComponent.cpp  PlayerRenderComponent.h
src/game/tile/: tile.cpp  tile.h
src/game/world/: World.h
src/game/world/board/: Board.cpp  Board.h
src/meshes/: human.mesh  player.mesh
src/thing/: thing.h
